# glfw_opengl_triangle

./: CMakeLists.txt  README.md  compile.sh  triangle-opengl.c
libs/GLAD/: gl.c  gl.h
